--- a/whereto/templates/main/index.html
+++ b/whereto/templates/main/index.html
@@ -20,7 +20,7 @@
 
   </section>
 </main>
-<div style="padding-top: 15px; padding-left: 100px;">
+<div class="p mb-5" style="padding-top: 100px; padding-left: 100px;">
   <h5>✨Reliable restaurant</h5>
 </div>
     <!-- Swiper -->
